# tap-coupa

./: .gitignore  README.md  pyproject.toml
tap_coupa/: client.py  selected_filters.py  streams.py  tap.py
