[tool.poetry]
name = "tap-coupa"
version = "0.1.0"
description = "`tap-coupa` is a Singer tap for Coupa API, built with the Meltano SDK for Singer Taps."
authors = ["hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
requests = "^2.25.1"
hotglue-singer-sdk = "^1.0.10"
backoff = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core==1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-coupa = 'tap_coupa.tap:TapCoupa.cli'
